assets/css/main.css
/* ... */
.nav__list li {
  background-color: red;
  height: 20%;
  width: 100vw;
  text-align: center;
}

.nav__list li:nth-child(1) {
  background-color: var(--adjacent1);
}

.nav__list li:nth-child(2) {
  background-color: var(--adjacent2);
}

.nav__list li:nth-child(3) {
  background-color: var(--adjacent3);
}

.nav__list li:nth-child(4) {
  background-color: var(--adjacent1);
}

.nav__list li:nth-child(5) {
  background-color: var(--adjacent2);
}

.nav__list li a {
  display: block;
  position: relative;
  top: 45%;
}

.nav__list li a:hover {
  transform: scale(1.2);
}

.nav__list li a::before {
  content: "";
    width: 25vw;
    height: 3px;
    background-color: #fff;
    position: absolute;
    top: 47.5%;
    left: 0;
    opacity: 0;
}

.large_nav li {
  margin-left: 3rem;
}

.nav__list li a:hover::before {
  opacity: 1;
}

/* Main */
/* Hero */
.showcase {
	/*background: url(../images/technician.png);*/
	/*background: linear-gradient(to bottom, rgba(0,0,0, 0.5), rgba(21,47,69, 0.5));*/	
	color: #fff;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 400px;
	letter-spacing: 1px;
	padding: 1em;
	font-size: 18px;
  text-align: center;

}

.showcase h2 {
	font-size: 40px;
	line-height: 60px;
}

.showcase span {
	color: var(--accent);
}

.slider_one {
	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/bulb.jpg);
	background-repeat: no-repeat;
	background-size: cover;
}

.slider_two {
	background-image: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/bot.jpg);
	background-repeat: no-repeat;
	background-size: cover;
}

.slider_three {
	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/brain_chip.jpg);
	background-repeat: no-repeat;
	background-size: cover;
}

#appointment,
#soon {
  padding: 1rem;
}

#appointment .container,
#soon .container {
  max-width: 400px;
  margin: 0 auto;
}

.post {
  width: 60%;
  margin-bottom: 1rem;
}

.services > *,
#articles .article {
  margin-bottom: 2rem;
}

.services_text,
.talk_sessions > *,
.article_header,
.gallery_slider {
  text-align: center;
}

.services h3,
.service_card h4,
.services i,
.talk_sessions h3 {
  margin-bottom: 1rem;
}

.services_cards,
.video_sessions,
.articles,
#appointment form {
  flex-direction: column;
}

.services_cards > .service_card {
  margin-bottom: 2.5rem;
  letter-spacing: 1px;
}

.service_card,
.video_sessions figure,
.article,
.article_full,
.event_card {
  width: 70%;
  margin: 0 auto 0.5rem auto;
  text-align: center;
  border: 1px solid #aaa;
  border-radius: 10px;
  padding: 1rem;
  box-shadow: 2px 2px #bbb;
  max-width: 300px;
}

.services i {
  color: var(--accent);
  font-size: x-large;
}

.video_sessions figure {
  margin-top: 2.5rem;
  width: 33%;
  min-width: 350px;
}

.article h4,
.events h3 {
  margin-bottom: 1rem;
  color: var(--accent);
  font-weight: 900;
  font-size: larger;
}

.article_full p {
  margin-bottom: 1rem;
}

footer li {
  margin-bottom: 0.8rem;
  font-weight: bolder;
}

footer form {
  flex-direction: column;
  width: 90%;
}

footer a {
  color: var(--light);
}

#footer_bottom > .container {
  flex-direction: column;
  align-items: center;
}

#footer_logo img {
  width: 200px;
  position: relative;
  top: 2rem;
}
/* NAVIGATION Modal & Appointment*/
.nav_modal,
.appointment_modal,
.soon_modal {
  background: var(--second-color);
  color: var(--light);
  height: 100vh;
  width: 100vw;
  padding: 4em 2em;
  top: -200vh;
  transition: 1s;
  position: fixed;
  z-index: 1;
}

.nav_modal {
  top: 0;
  padding: 1rem;
}

.nav_modal a {
  color: var(--light);
}

.nav__close,
.appointment_close_modal,
.phone_close_modal,
.soon_close_modal {
  position: absolute;
  right: 2.5rem;
  top: 3.5rem;
  font-size: 1.5rem;
  cursor: pointer;
  color: var(--light);
  fill: var(--light);
}

.appointment_close_modal,
.soon_close_modal {
  top: 1rem;
}

.phone_close_modal {
  top: 0.5rem;
  right: 1rem;
}

.soon_modal h2 {
  margin-top: 4rem;
  text-align: center;
}

.nav__show {
  position: absolute;
  right: 1.3rem;
  top: -2rem;
  font-size: 1.5rem;
  cursor: pointer;
  color: var(--first-color);
  z-index: 11;
}

nav.container {
  padding-top: 40px;
}
.large_nav {
  z-index: 3;
    padding: 0 15px;
    height: 40px;
    width: 100%;
    position: fixed;
    top: 0;
    background: #f5b335;
    -webkit-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    overflow: hidden;
}

.large_nav.hide-nav {
  -webkit-transform: translateY(-100%);
  transform: translateY(-100%);
}

/* add this class using javascript */
.nav-up {
  top: -40px;
}

/* Show menu */
.menu_slide_right {
  transform: translateX(0);
  transition: all 0.4s ease-in-out;
}

.menu_slide_left {
  transform: translateX(-100vw);
  transition: all 0.8s ease-in-out;
}

/* Slide in animation with delay for each nav item */
.slide_in_1 {
  animation: slide_in 0.2s linear 0.2s  both;
}

.slide_in_2 {
  animation: slide_in 0.4s linear 0.4s  both;
}

.slide_in_3 {
  animation: slide_in 0.4s linear 0.6s  both;
}

.slide_in_4 {
  animation: slide_in 0.4s linear 0.8s  both;
}

.slide_in_5 {
  animation: slide_in 0.4s linear 1s  both;
}

@keyframes slide_in {
  from {
      transform: translateX(-100%);
  }

  to {
      transform: translateX(0);
  }
}

/* Slide out animation with delay for each nav item */
.slide_out_1 {
  animation: slide_out 0.3s linear 0.5s  both;
}

.slide_out_2 {
  animation: slide_out 0.3s linear 0.4s  both;
}

.slide_out_3 {
  animation: slide_out 0.3s linear 0.3s  both;
}

.slide_out_4 {
  animation: slide_out 0.3s linear 0.2s  both;
}

.slide_out_5 {
  animation: slide_out 0.3s linear 0.1s  both;
}

@keyframes slide_out {
  from {
      transform: translateX(0);
  }

  to {
      transform: translateX(-100%);
  }
}

/* .show-menu {
  position: fixed;
  left: 0;
} */
/* ... */

